--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-relay": "^1.5.0",
     "style-loader": "0.20.3",
     "sw-precache-webpack-plugin": "0.11.5",
     "url-loader": "1.0.1",
@@ -42,6 +43,11 @@
     "@types/node": "^9.4.7",
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
+    "@types/react-relay": "^1.3.4",
+    "babel-plugin-relay": "^1.5.0",
+    "graphql": "^0.13.2",
+    "relay-compiler": "^1.5.0",
+    "shelljs": "^0.8.1",
     "tslint": "^5.9.1",
     "tslint-react": "^3.5.1",
     "typescript": "^2.7.2"
@@ -49,7 +55,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "relay": "relay-compiler --src ./src --schema schema.graphql --extensions js jsx ts tsx",
+    "schema": "node scripts/schema.js"
   },
   "jest": {
     "collectCoverageFrom": [
